# tbp-viz

./: .gitignore  Cargo.toml  README.md  list.json  meta_template.json
dep/plotters/src/: lib.rs
dep/plotters/src/chart/context/cartesian2d/: draw_impl.rs
dep/plotters/src/style/: mod.rs
src/: main.rs
src/data/: iso8601.rs  mod.rs  serde_metas.rs
src/plot/: color.rs  font.rs  img.rs  marker.rs  mod.rs  range.rs
src/plot/plots/: list_over_time.rs  mod.rs  ranking_difference.rs  release_dates.rs  summary.rs
src/request/: igdb.rs  mod.rs  resource.rs
